--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Questionário Personalizado</title>
+    <title>Tenta acertar tudo em amor</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -250,7 +250,7 @@
 </head>
 
 <body>
-    <h1>Questionário Personalizado</h1>
+    <h1>Tenta acertar tudo em amor</h1>
     <form id="quiz">
 
         <!-- PERGUNTA 1 -->
