--- a/index.html
+++ b/index.html
@@ -246,6 +246,131 @@
                 transform: translateY(-20px);
             }
         }
+
+        .heart-background {
+            position: relative;
+            width: 100%;
+            height: 100%;
+        }
+
+        .heart {
+            position: absolute;
+            font-size: 20px;
+            color: #ff6b81;
+            animation: float 5s infinite ease-in-out;
+            opacity: 0.6;
+        }
+
+        .message-box {
+            position: absolute;
+            /* Mudamos de relative para absolute */
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%) rotate(-2deg);
+            /* Adicionamos translate para centralização */
+            z-index: 10;
+            background-color: white;
+            padding: 40px;
+            border-radius: 20px;
+            text-align: center;
+            box-shadow: 0 10px 30px rgba(255, 105, 140, 0.3);
+            max-width: 80%;
+            /* Aumentamos um pouco para mobile */
+            width: fit-content;
+            margin: 0;
+            /* Removemos a margem automática */
+        }
+
+        .message {
+            font-size: 2em;
+            color: #ff6b81;
+            font-weight: bold;
+            margin-bottom: 20px;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+            padding: 0 20px;
+            /* Adicionamos padding horizontal */
+        }
+
+        .heart-icon {
+            font-size: 3em;
+            color: #ff4757;
+            animation: pulse 1.5s infinite;
+            display: inline-block;
+        }
+
+        @keyframes float {
+
+            0%,
+            100% {
+                transform: translateY(0) rotate(0deg);
+            }
+
+            50% {
+                transform: translateY(-20px) rotate(10deg);
+            }
+        }
+
+        @keyframes pulse {
+            0% {
+                transform: scale(1);
+            }
+
+            50% {
+                transform: scale(1.2);
+            }
+
+            100% {
+                transform: scale(1);
+            }
+        }
+
+        .confetti {
+            position: absolute;
+            width: 10px;
+            height: 10px;
+            background-color: #ff6b81;
+            opacity: 0.7;
+            animation: confetti-fall 5s linear infinite;
+        }
+
+        @keyframes confetti-fall {
+            0% {
+                transform: translateY(-100vh) rotate(0deg);
+                opacity: 1;
+            }
+
+            100% {
+                transform: translateY(100vh) rotate(360deg);
+                opacity: 0;
+            }
+        }
+
+        /* Estilo para a tela de proposta (escondido inicialmente) */
+        #proposal-screen {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: #ffebee;
+            z-index: 1000;
+        }
+
+        @media (max-width: 768px) {
+            .message-box {
+                max-width: 90%;
+                padding: 20px;
+            }
+
+            .message {
+                font-size: 1.5em;
+            }
+
+            .heart-icon {
+                font-size: 2em;
+            }
+        }
     </style>
 </head>
 
@@ -357,7 +482,15 @@
         <div id="result" style="display: none;"></div>
         <div id="error" class="error" style="display: none;"></div>
     </form>
+    <div id="proposal-screen">
+        <div class="heart-background" id="heartBackground"></div>
 
+        <div class="message-box">
+            <div class="heart-icon">❤</div>
+            <div class="message">Não sei quantas você acertou mas com certeza é o suficiente pra ficar comigo ❤</div>
+            <div class="heart-icon">❤</div>
+        </div>
+    </div>
     <script>
 
         function validateQuiz() {
@@ -402,28 +535,59 @@
             <div class="error-icon">⚠️</div>
             <h1>VIRE PARA TRÁS!</h1>
             <p>De preferência, dê um beijo no seu amor ❤</p>
-
             <div class="countdown" id="countdown">10</div>
             <p>SEUS RESULTADOS ESTÃO SENDO CALCULADOS!!</p>
         </div>
     `;
 
             // Contagem regressiva
-            let seconds = 10;
+            let seconds = 3;
             const countdown = setInterval(() => {
                 seconds--;
                 document.getElementById('countdown').textContent = seconds;
 
                 if (seconds <= 0) {
+                    document.body.innerHTML = originalContent
                     clearInterval(countdown);
-                    window.location.pathname = '/proposta.html';
+                    // Mostra a tela de proposta em vez de redirecionar
+                    document.getElementById('quiz').style.display = 'none';
+                    document.getElementById('proposal-screen').style.display = 'block';
+                    createHearts();
+                    createConfetti();
                 }
             }, 1000);
-
-            // Opcional: Botão de cancelamento (se quiser adicionar)
-            // document.body.innerHTML += `<button onclick="document.body.innerHTML = originalContent">Cancelar</button>`;
         }
 
+        // Funções para criar corações e confetes (adicione ao seu JavaScript existente)
+        function createHearts() {
+            const heartBackground = document.getElementById('heartBackground');
+            for (let i = 0; i < 30; i++) {
+                const heart = document.createElement('div');
+                heart.classList.add('heart');
+                heart.innerHTML = '❤';
+                heart.style.left = Math.random() * 100 + 'vw';
+                heart.style.top = Math.random() * 100 + 'vh';
+                heart.style.fontSize = (Math.random() * 20 + 10) + 'px';
+                heart.style.animationDuration = (Math.random() * 5 + 3) + 's';
+                heart.style.animationDelay = (Math.random() * 3) + 's';
+                heartBackground.appendChild(heart);
+            }
+        }
+
+        function createConfetti() {
+            const colors = ['#ff6b81', '#ff4757', '#ff6348', '#ffa502', '#eccc68'];
+            for (let i = 0; i < 50; i++) {
+                const confetti = document.createElement('div');
+                confetti.classList.add('confetti');
+                confetti.style.left = Math.random() * 100 + 'vw';
+                confetti.style.backgroundColor = colors[Math.floor(Math.random() * colors.length)];
+                confetti.style.animationDuration = (Math.random() * 3 + 2) + 's';
+                confetti.style.animationDelay = (Math.random() * 2) + 's';
+                confetti.style.width = (Math.random() * 10 + 5) + 'px';
+                confetti.style.height = (Math.random() * 10 + 5) + 'px';
+                document.getElementById('proposal-screen').appendChild(confetti);
+            }
+        }
         function carregaListen() {
             const naoAmaOption = document.getElementById('naoama');
 
@@ -444,6 +608,7 @@
             carregaListen();
         };
     </script>
+
 </body>
 
 </html>
