--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
 
         <div class="message-box">
             <div class="heart-icon">❤</div>
-            <div class="message">Não sei quantas você acertou mas com certeza é o suficiente pra ficar comigo ❤</div>
+            <div class="message">Nem eu sei o que tá certo ali, <br> só sei que eu te amo ❤</div>
             <div class="heart-icon">❤</div>
         </div>
     </div>
